--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "next": "9.2.2",
+    "nprogress": "^0.2.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "styled-components": "^5.0.1"
