--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@zeit/next-css": "^1.0.1",
+    "apollo-boost": "^0.4.7",
+    "graphql": "^14.6.0",
     "next": "9.2.2",
     "nprogress": "^0.2.0",
     "react": "16.12.0",
