--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/react-components": "^3.1.3",
     "@apollo/react-hooks": "^3.1.3",
     "@zeit/next-css": "^1.0.1",
     "apollo-boost": "^0.4.7",
     "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.3",
     "next": "9.2.2",
+    "next-with-apollo": "^5.0.0",
     "nprogress": "^0.2.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
