--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "styled-components": "^5.0.1"
+  },
+  "devDependencies": {
+    "jest": "^25.1.0"
   }
 }
