--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "react": "16.12.0",
+    "react-adopt": "^0.6.0",
     "react-dom": "16.12.0",
     "styled-components": "^5.0.1"
   },
