--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@apollo/react-hooks": "^3.1.3",
     "@zeit/next-css": "^1.0.1",
     "apollo-boost": "^0.4.7",
+    "downshift": "^5.0.5",
     "graphql": "^14.6.0",
+    "lodash.debounce": "^4.0.8",
     "next": "9.2.2",
     "next-with-apollo": "^5.0.0",
     "nprogress": "^0.2.0",
