--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@apollo/react-components": "^3.1.3",
     "@apollo/react-hooks": "^3.1.3",
+    "@stripe/stripe-js": "^1.3.0",
     "@zeit/next-css": "^1.0.1",
     "apollo-boost": "^0.4.7",
     "downshift": "^5.0.5",
