--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^1.10.7",
     "jest": "^25.1.0"
   }
 }
