--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@stripe/stripe-js": "^1.3.0",
     "@zeit/next-css": "^1.0.1",
     "apollo-boost": "^0.4.7",
+    "body-parser": "^1.19.0",
     "downshift": "^5.0.5",
+    "express": "^4.17.1",
     "graphql": "^15.0.0",
     "lodash.debounce": "^4.0.8",
     "next": "9.2.2",
